<resources>
    <string name="app_name">NotesDroid</string>

    <!-- Strings related to App -->
    <string name="prompt_email">Email address</string>
    <string name="prompt_password">Password</string>

    <!-- Strings related to login -->
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Strings related to signUp -->
    <string name="prompt_name">Name</string>
    <string name="action_sign_up">Sign up</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_emptyfield">There can be no empty fields</string>

    <string name="menu_home">Registration</string>
    <string name="menu_gallery">Record</string>
    <string name="menu_slideshow">Exit</string>

    <string name="prompt_year">-Year-</string>
    <string name="spinner_firstYear_Registration">FIRST</string>
    <string name="spinner_secondYear_Registration">SECOND</string>

    <string name="prompt_cycle">-Educational cycle-</string>
    <string name="spinner_dam_registration" translatable="false">DAM</string>
    <string name="spinner_daw_registration" translatable="false">DAW</string>
    <string name="spinner_asir_registration" translatable="false">ASIR</string>

    <string-array name="primeroDamDaw">
        <item>Information systems</item>
        <item>Databases</item>
        <item>Programming</item>
        <item>Markup languages</item>
        <item>Development Environments</item>
        <item>English</item>
        <item>Training and career counseling</item>
    </string-array>

    <string-array name="profesorPrimeroDam">
        <item>Jaime Alemany</item>
        <item>Alicia Velasco</item>
        <item>Marciano de la Hoz</item>
        <item>Alicia Velasco</item>
        <item>Marciano de la Hoz</item>
        <item>Teresa Rubio</item>
        <item>Maria Sánchez-Cruz</item>
    </string-array>

    <string-array name="profesorPrimeroDaw">
        <item>Jaime Alemany</item>
        <item>Alicia Velasco</item>
        <item>Fernando G. Aranzabe</item>
        <item>Alicia Velasco</item>
        <item>Fernando G. Aranzabe</item>
        <item>Teresa Rubio</item>
        <item>Maria Sánchez-Cruz</item>
    </string-array>

    <string-array name="segundoDam">
        <item>Data access</item>
        <item>Interface development</item>
        <item>Mult. prog. and devices mobile</item>
        <item>Prog. of services and processes</item>
        <item>Business management systems</item>
        <item>Business and Entrepreneurship</item>
    </string-array>

    <string-array name="profesorSegundoDam">
        <item>Joaquin Rubio</item>
        <item>Jose Alberto Garcia</item>
        <item>Jose Luis Glez Schez</item>
        <item>Fernando G. Aranzabe</item>
        <item>Inma Gijon</item>
        <item>Maria Sánchez-Cruz</item>
    </string-array>

    <string-array name="segundoDaw">
        <item>Web dev. in client environment</item>
        <item>Web dev. in server environment</item>
        <item>Web application deployment</item>
        <item>Web interface design</item>
        <item>Business and Entrepreneurship</item>
    </string-array>

    <string-array name="profesorSegundoDaw">
        <item>Inma Gijon</item>
        <item>Fernando G. Aranzabe</item>
        <item>Jose Luis Glez Schez</item>
        <item>Diego Cordoba</item>
        <item>Maria Sánchez-Cruz</item>
    </string-array>

    <string-array name="primeroAsir">
        <item>Implementation of O.S.</item>
        <item>Network planning and admin.</item>
        <item>Hardware fundamentals</item>
        <item>Database management</item>
        <item>Markup languages</item>
        <item>English</item>
        <item>Training and career counseling</item>
    </string-array>

    <string-array name="profesorPrimeroAsir">
        <item>LuisFer Nicolas</item>
        <item>Oscar Fernandez Morena</item>
        <item>Jose Alberto Garcia</item>
        <item>Joaquin Rubio</item>
        <item>Maria del Mar Jimenez</item>
        <item>Teresa Rubio</item>
        <item>Maria Sánchez-Cruz</item>
    </string-array>

    <string-array name="segundoAsir">
        <item>Operating systems management</item>
        <item>Network and Internet services</item>
        <item>Implementation of web applications</item>
        <item>Admin. of database management systems</item>
        <item>Security and high availability</item>
        <item>Business and Entrepreneurship</item>
    </string-array>

    <string-array name="profesorSegundoAsir">
        <item>LuisFer Nicolas</item>
        <item>Maria del Mar Jimenez</item>
        <item>Maria del Mar Jimenez</item>
        <item>Joaquin Rubio</item>
        <item>Joaquin Rubio</item>
        <item>Maria Sánchez-Cruz</item>
    </string-array>

    <string name="profesor">Teacher</string>
    <string name="clase">Class</string>
    <string name="notaPrueba">Mark</string>
    <string name="realizadaPrueba">Complete</string>
    <string name="btnAceptar">Accept</string>
    <string name="btnCancelar">Cancel</string>
    <string name="nuevaPrueba">New Test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>