<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <EditText
            android:layout_width="355dp"
            android:layout_height="43dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edtNamePrueba"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:hint="@string/prompt_name"/>
    <TextView
            android:text="@string/nuevaPrueba"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" android:textSize="18sp" android:textStyle="bold"/>
    <EditText
            android:layout_width="355dp"
            android:layout_height="43dp"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/edtDatePrueba"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="19dp"
            app:layout_constraintTop_toBottomOf="@+id/edtNamePrueba"/>
    <EditText
            android:layout_width="155dp"
            android:layout_height="43dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/edtNotaPrueba"
            android:layout_marginTop="19dp"
            app:layout_constraintTop_toBottomOf="@+id/edtDatePrueba"
            android:hint="@string/notaPrueba" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp"/>
    <Button
            android:text="@string/btnAceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnAceptarPrueba"
            android:layout_marginTop="19dp"
            app:layout_constraintTop_toBottomOf="@+id/edtNotaPrueba" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="61dp"
    />
    <Button
            android:text="@string/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnCancelarPrueba"
            android:layout_marginEnd="61dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="113dp"
            app:layout_constraintStart_toEndOf="@+id/btnAceptarPrueba" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/ckbPruebaRealizadaDialog"/>
    <CheckBox
            android:text="@string/realizadaPrueba"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/ckbPruebaRealizadaDialog"
            android:layout_marginTop="19dp"
            app:layout_constraintTop_toBottomOf="@+id/edtDatePrueba" android:layout_marginEnd="54dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="78dp"
            app:layout_constraintStart_toEndOf="@+id/edtNotaPrueba"/>
</androidx.constraintlayout.widget.ConstraintLayout>