<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".signUp.SignUp">

    <Button
            android:id="@+id/btnSignUp_SignUp"
            android:enabled="false"
            android:layout_width="143dp"
            android:layout_height="57dp"
            android:layout_gravity="start"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:text="@string/action_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/spnYear_SignUp"
            app:layout_constraintHorizontal_bias="0.502"/>
    <EditText
            android:id="@+id/textUser_SignUp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="@string/prompt_email"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/txtName_SignUp"/>
    <EditText
            android:id="@+id/textPwd_SignUp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="@string/prompt_password"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/textUser_SignUp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars"
            android:id="@+id/imgBtnFotoPerfil_SignUp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="68dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtName_SignUp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/prompt_name" android:layout_marginTop="39dp"
            app:layout_constraintTop_toBottomOf="@+id/imgBtnFotoPerfil_SignUp"/>
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="40dp" android:id="@+id/spnCycle_SignUp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textAlignment="center"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/textPwd_SignUp"
            android:spinnerMode="dropdown"/>
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="40dp" android:id="@+id/spnYear_SignUp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.496" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/spnCycle_SignUp"/>
</androidx.constraintlayout.widget.ConstraintLayout>